[package]
name = "glowmarkt"
version = "0.1.0"
description = "Access to the Glowmarkt API for smart meter data."
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "^0.11.10", features = ["json"] }
tokio = { version = "^1.17.0", features = ["full"] }
clap = { version = "^3.2.17", features = ["derive", "env"] }
serde = { version = "^1.0.136", features = ["derive"] }
log = "^0.4.14"
flexi_logger = { version = "^0.22.3", features = ["colors"] }
time = { version = "^0.3.9", features = ["serde"] }
