[package]
name = "glowmarkt"
version = "0.5.2"
description = "Access to the Glowmarkt API for smart meter data."
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/Mossop/glowmarkt-rs"
homepage = "https://github.com/Mossop/glowmarkt-rs"

[dependencies]
reqwest = { version = "^0.12.12", features = ["json"] }
tokio = { version = "^1.17.0", features = ["full"] }
clap = { version = "^4.5.29", features = ["derive", "env"] }
serde = { version = "^1.0.136", features = ["derive"] }
log = "^0.4.14"
flexi_logger = { version = "^0.29.8", features = ["colors"] }
time = { version = "^0.3.37", features = ["serde", "serde-well-known", "parsing"] }
serde_json = "^1.0.83"
